# openlk_serialServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
components/auth_service/: CMakeLists.txt
components/auth_service/include/: auth_service.h
components/auth_service/src/: auth_service.c
components/bridge_service/: CMakeLists.txt
components/bridge_service/include/: bridge_service.h
components/bridge_service/src/: bridge_service.c
components/config_service/: CMakeLists.txt
components/config_service/include/: config_keys.h  config_service.h
components/hal_adapters/include/: hal_gpio.h
components/hal_adapters/src/: hal_timer.c  hal_uart.c
components/net_service/: CMakeLists.txt
components/net_service/include/: net_service.h
components/net_service/src/: dns_redirect.c  dns_redirect.h  net_service.c
components/protocol_service/: CMakeLists.txt
components/protocol_service/include/: protocol_service.h  protocol_service_internal.h
components/protocol_service/src/: protocol_service.c  protocol_tcp_server.c  protocol_udp.c
components/serial_service/src/: serial_service.c
components/web_minimal/: CMakeLists.txt
components/web_minimal/include/: web_minimal.h
components/web_minimal/src/: web_api_auth.c  web_api_network.c  web_api_scan.c  web_api_serial.c  web_api_system.c  web_api_workmode.c  web_auth.c  web_internal.h  web_json.c  web_minimal.c  web_static.c  web_ws_serial.c
components/web_minimal/www/: app.css  app.js  index.html
components/web_minimal/www/modules/: api.js  router.js  ui.js
components/web_minimal/www/pages/: info.js  login.js  network.js  serial.js  workmode.js
docs/: API.md  DEVELOPMENT_TUTORIAL.md  INTERFACES.md  STUBS.md
examples/bridge_serial_tcp_demo/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/bridge_serial_tcp_demo/components/bridge_serial_tcp/: CMakeLists.txt
examples/bridge_serial_tcp_demo/components/bridge_serial_tcp/include/: bridge_serial_tcp.h
examples/bridge_serial_tcp_demo/components/bridge_serial_tcp/src/: bridge_serial_tcp.c
examples/bridge_serial_tcp_demo/components/config_service/include/: config_keys.h
examples/bridge_serial_tcp_demo/components/hal_adapters/: CMakeLists.txt
examples/bridge_serial_tcp_demo/components/hal_adapters/include/: hal_timer.h  (+1 more)
examples/bridge_serial_tcp_demo/components/serial_service/: CMakeLists.txt
examples/bridge_serial_tcp_demo/components/web_minimal/: CMakeLists.txt
examples/bridge_serial_tcp_demo/components/web_minimal/include/: web_minimal.h
examples/bridge_serial_tcp_demo/components/web_minimal/src/: web_api_bridge.c  web_api_scan.c  web_api_system.c  web_internal.h  web_minimal.c  web_static.c  web_ws_serial.c
examples/bridge_serial_tcp_demo/components/web_minimal/www/: app.js  index.html
examples/bridge_serial_tcp_demo/components/web_minimal/www/modules/: api.js
examples/bridge_serial_tcp_demo/components/web_minimal/www/pages/: bridge.js  console.js  network.js
examples/bridge_serial_tcp_demo/main/: CMakeLists.txt  app_main.c
main/: CMakeLists.txt  app_main.c
(+9 files in other folders)
